--- a/client/src/styles/auth.css
+++ b/client/src/styles/auth.css
@@ -2,22 +2,16 @@
     width: 100%;
     min-height: 100vh;
     background: #fdfdfd;
-    /* display: flex;
+    display: flex;
     align-items: center;
-    justify-content: center; */
-    position: relative;
+    justify-content: center;
 }
-
 .auth_page form{
     background: #fff;
     max-width: 400px;
     width: 100%;
     border: 1px solid #ddd;
     padding: 50px 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .auth_page form .pass{
