--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -9,4 +9,17 @@
 .status .statusBtn:hover{
     background: #ddd;
 }
+.status .statusBtn{
+    background: #f1f1f1;
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    color: #555;
+    padding: 0 10px;
+    text-align: left;
+    margin: 0 5px;
+}
+.status .statusBtn:hover{
+    background: #ddd;
+}
 
