--- a/frontend/src/styles/status_modal.css
+++ b/frontend/src/styles/status_modal.css
@@ -66,3 +66,24 @@
     width: 100%;
     height: 100%;
 }
+.status_body .show_images #file_img img,
+.status_body .show_images #file_img video{
+    display: block;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    max-height: 100px;
+}
+
+.status_body .stream span{
+    position: absolute;
+    top: -10px;
+    right: 5px;
+    color: crimson;
+    font-size: 2rem;
+    font-weight: 900;
+    cursor: pointer;
+}
+.status_body .dropdown-menu{
+    transform: translate3d(-153px, -190px, 0px) !important;
+}
