--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -22,4 +22,15 @@
 .status .statusBtn:hover{
     background: #ddd;
 }
-
+/* ------------Posts ------ */
+.posts .card{
+    box-shadow: 0 0 4px #ddd;
+}
+/* --------- Post Card Header --------- */
+.posts .card_header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    padding: 15px 25px;
+}
