--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -6,9 +6,6 @@
     border-radius: 5px;
     border: 1px solid rgb(0, 0, 0, .125);
 }
-.status .statusBtn:hover{
-    background: #ddd;
-}
 .status .statusBtn{
     background: #f1f1f1;
     border: none;
@@ -22,6 +19,7 @@
 .status .statusBtn:hover{
     background: #ddd;
 }
+
 /* ------------Posts ------ */
 .posts .card{
     box-shadow: 0 0 4px #ddd;
@@ -34,6 +32,19 @@
     cursor: pointer;
     padding: 15px 25px;
 }
+.posts .card_header .card_name{
+    transform: translateY(3px);
+}
+.posts .card_header .dropdown-menu{
+    position: absolute;
+    right: 0;
+    left: inherit;
+}
+.posts .card_header .dropdown-item{
+    display: flex;
+    margin: 5px 0;
+}
+
 /* ---------- Post Card Body ---------- */
 .posts .card_body-content{
     padding: 0 25px;
@@ -43,4 +54,22 @@
 .posts .card_body-content .readMore{
     color: crimson;
     cursor: pointer;
+}
+
+/* ---------- Post Card Footer ---------- */
+.posts .card_icon_menu{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 15px;
+    cursor: pointer;
+}
+.posts .card_icon_menu i{
+    font-size: 28px;
+    margin: 10px;
+}
+.posts .card_icon_menu img{
+    width: 28px;
+    height: 28px;
+    transform: translate(5px, -5px);
+    opacity: 0.9;
 }
